--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky"
+    "prepare": "husky",
+    "build:icons": "tsx src/assets/build-icons.mts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -42,6 +43,8 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "fs-extra": "^11.3.0",
+    "glob": "^11.0.1",
     "i18next": "^25.0.0",
     "i18next-resources-to-backend": "^1.2.1",
     "input-otp": "^1.4.2",
@@ -49,6 +52,7 @@
     "next": "15.3.0",
     "next-i18n-router": "^5.5.1",
     "next-themes": "^0.4.6",
+    "node-html-parser": "^7.0.1",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
@@ -65,6 +69,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -74,6 +79,7 @@
     "lint-staged": "^15.5.1",
     "prettier": "3.5.3",
     "tailwindcss": "^4",
+    "tsx": "^4.19.3",
     "typescript": "^5"
   },
   "lint-staged": {
