--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
     "next-i18n-router": "^5.5.1",
+    "next-intl": "^4.0.2",
     "next-themes": "^0.4.6",
     "node-html-parser": "^7.0.1",
     "react": "^19.0.0",
