--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "next-intl": "^4.0.2",
     "next-themes": "^0.4.6",
     "node-html-parser": "^7.0.1",
+    "nuqs": "^2.4.3",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
